@@ -3,7 +3,7 @@ NAME
     HTTP::Cookies
 
 VERSION
-    version 0.07
+    version 0.08
 
 SYNOPSIS
         # Use the functional interface for quick read-only access
