@@ -1,6 +1,7 @@
 Revision history for HTTP-CookieMonster
 
 {{$NEXT}}
+    - Cookie values are now unescaped before reading and escaped before writing.
 
 0.07 2014-02-04 10:50:27 America/Toronto
     - Adds local to MANIFEST.SKIP
